Correction des extensions d’images PNG pour AEME et 6point9

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
       <div class="row portfolio-container">
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/aeme-site.jpg" class="img-fluid" alt="Site web de l'Agence AEME, modernisé lors d'un stage de 6 mois">
+            <img src="assets/img/portfolio/aeme-site.png" class="img-fluid" alt="Site web de l'Agence AEME, modernisé lors d'un stage de 6 mois">
             <div class="portfolio-info">
               <h4>Agence AEME</h4>
               <p>Stage de 6 mois : contribution à l’amélioration et à la modernisation du site officiel de l’Agence pour l’Économie et la Maîtrise de l’Énergie.</p>
@@ -626,7 +626,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/6point9-site.jpg" class="img-fluid" alt="Site web de 6point9, refonte et amélioration en partenariat">
+            <img src="assets/img/portfolio/6point9-site.png" class="img-fluid" alt="Site web de 6point9, refonte et amélioration en partenariat">
             <div class="portfolio-info">
               <h4>6point9</h4>
               <p>Refonte et amélioration du site web de 6point9 dans le cadre d’un partenariat, avec optimisation de l’ergonomie et du design.</p>
